event header new design fix on mobile

--- a/src/event/components/header/header.css
+++ b/src/event/components/header/header.css
@@ -1,64 +1,74 @@
 .event-header {
-    background: url("../../assets/header/headerBackground.png") no-repeat;
-    height: 131px;
-    border-radius: 30px 0px 30px 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    margin-bottom: 24px;
-    object-fit: cover;
-    cursor: pointer;
-    background-size: 100%;
-    margin-top: 35px;
+  background: url("../../assets/header/headerBackground.png") no-repeat;
+  height: 131px;
+  border-radius: 30px 0px 30px 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  margin-bottom: 24px;
+  object-fit: cover;
+  cursor: pointer;
+  background-size: 100%;
+  margin-top: 35px;
 }
 
 .event-header .rotator {
-    width: 46px;
-    height: 46px;
-    border-radius: 50%;
-    background: #395feb;
-    position: absolute;
-    right: 0;
-    top: 0;
-    transition: all 0.4s ease;
-    z-index: 2;
-    display: flex;
+  width: 46px;
+  height: 46px;
+  border-radius: 50%;
+  background: #395feb;
+  position: absolute;
+  right: 0;
+  top: 0;
+  transition: all 0.4s ease;
+  z-index: 2;
+  display: flex;
 }
 
 .event-header .rotator img {
-    margin: auto;
-    width: 12px;
+  margin: auto;
+  width: 12px;
 }
 
 .event-header:hover .rotator {
-    transform: rotate(45deg);
+  transform: rotate(45deg);
 }
 
 .event-header::after {
-    content: url("../../assets/header/arrowButton.svg");
-    position: absolute;
-    left: auto;
-    right: 0px;
-    top: 0px;
+  content: url("../../assets/header/arrowButton.svg");
+  position: absolute;
+  left: auto;
+  right: 0px;
+  top: 0px;
 }
 
 @media screen and (max-width: 768px) {
-    .event-header {
-        height: auto;
-        background: url("../../assets/header/headerBackgroundMobile.png")
-            no-repeat;
-        background-size: 100%;
-        object-fit: cover;
-    }
-    .event-header div {
-        padding: 40px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
+  .event-header {
+    height: auto;
+    background: url("../../assets/header/headerBackgroundMobile.png") no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
 
-    .event-header div img {
-        width: 85%;
-    }
+  .event-header .rotator {
+    width: 20px !important;
+    height: 20px !important;
+    padding: 21px;
+  }
+
+  .event-header .rotator img{
+    position: absolute;
+  }
+
+  .event-header div {
+    padding: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .event-header div img {
+    width: 85%;
+  }
 }
